# AI-Trader

./: .env.example  .gitignore  .runtime_env.json  AI_POISONING_PREVENTION.md  ANTHROPIC_MIGRATION.md  BENCHMARK_ANALYSIS.md  CLAUDE.md  CLAUDE_SDK_ENHANCED_GUIDE.md  CLAUDE_SDK_GUIDE.md  COMPLETE_BREAKDOWN.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEV_CHECKLIST.md  DOMAIN_LIST_SECURITY.md  ENHANCED_AGENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  INFORMATION_GATHERING_OPTIONS.md  INSTALLATION_COMPLETE.md  JWT_AUTHENTICATION_GUIDE.md  MARKET_INTELLIGENCE_GUIDE.md  MARKET_INTELLIGENCE_SUMMARY.md  MCP_AUTHENTICATION_GUIDE.md  NEWS_SCREENING_GUIDE.md  PR_DESCRIPTION.md  QUICKSTART_ENHANCED.md  QUICK_START_AUTH.md  README.md  README_CN.md  README_DEPLOYMENT.md  README_HI.md  README_JA.md  README_ZH.md  REALTIME_AGENT_GUIDE.md  REALTIME_SYSTEM_SUMMARY.md  RECOMMENDED_PRODUCTION_SECURITY.md  SECURITY_RESOURCE_COMPARISON.md  SETUP_COMPLETE.md  SUMMARY_SECURITY_INFO_GATHERING.md  TESTING_GUIDE.md  (+32 more)
agent/: blockrun_chat.py
agent_tools/: content_sanitizer.py  domain_lists.py  production_security.py  security_logger.py  start_mcp_services.py  tool_crypto_exchange.py  tool_crypto_trade.py  tool_get_price_crypto.py  tool_get_price_local.py  tool_jina_search.py  tool_math.py  tool_portfolio_analytics.py  tool_technical_analysis.py  tool_trade.py  tool_trade_limit.py
auth/: README.md  auth_service.py  jwt_utils.py  mcp_auth_helper.py  middleware.py  user_manager.py
configs/: anthropic_config.json  astock_config.json  astock_test.json  backtest_tech100_config.json  (+14 more)
(+220 files in other folders)
